--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@
     --text-footer-link: rgba(255, 255, 255, 0.6);
     --primary-button-background: #F5F4FA;
     --primary-color-icon: rgb(175, 177, 184);
-    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    /* --timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 
 }
 
@@ -101,7 +101,7 @@ h6 {
     color: var(--text-black);
     transition-property: color;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-logo span:hover,
@@ -131,7 +131,7 @@ h6 {
     border-radius: 2px;
     transition-property: opacity;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
 }
 
@@ -158,7 +158,7 @@ h6 {
     color: var(--main-text-color)
     transition-property: color;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list .current {
@@ -182,7 +182,7 @@ h6 {
     color: var(--second-text-color)
     transition-property: color;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list .header-mail:hover,
@@ -238,7 +238,7 @@ h6 {
     background-size: cover;
 
     border: 1px solid #000000;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .hero-title {
@@ -281,7 +281,7 @@ h6 {
 
     transition-property: background-color;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
@@ -302,7 +302,7 @@ h6 {
 
     transition-property: background-color, color, box-shadow;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-btn:hover,
@@ -510,7 +510,7 @@ h6 {
     fill: var(--primary-color-icon);
     transition-property: background-color, fill;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-link:hover,
@@ -570,7 +570,7 @@ fill: currentColor;
     align-items: center;
     transition-property: color, border, box-shadow;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-icon {
@@ -603,7 +603,7 @@ fill: currentColor;
     color:var(--text-white);
     transition-property: color;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer {
@@ -637,7 +637,8 @@ fill: currentColor;
 .footer-tel {
     transition-property: background-color, color, box-shadow;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .footer-adress-link:hover,
 .footer-adress-link:focus,
@@ -672,7 +673,7 @@ fill: currentColor;
     fill: var(--text-white);
     transition-property: background-color;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-link:hover,
@@ -709,7 +710,7 @@ fill: currentColor;
     border: 1px solid #EEEEEE;
     transition-property: box-shadow;
     transition-duration: 250ms;
-    transition-timing-function: var(--timing-function);
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-projects-item:hover,
